--- a/cms/css/style_carbook.css
+++ b/cms/css/style_carbook.css
@@ -12,7 +12,7 @@
   margin-left: 30px;
   margin: 0px;
   padding: 0px;
-  background-color: blue;
+  /*background-color: blue;*/
 }
 
 .control_small{
