--- a/css/styleServico01.css
+++ b/css/styleServico01.css
@@ -188,6 +188,7 @@ imagem e descricao em destaque*/
   padding: 0px;
     color: #c4c9d1;
     text-align: center;
+    font-family:  Kozuka Gothic Pro Monospace;
 }
 
 .classificacao{
