--- a/css/styleMenus.css
+++ b/css/styleMenus.css
@@ -156,6 +156,7 @@ color: #fff;
   margin-left: 10px;
   margin-bottom: -20;
   font-size:  19px;
+    font-family:  century ghotic;
   /*border-bottom: 2px solid black;*/
   text-align: center;
   line-height:70px;
@@ -489,14 +490,15 @@ color: #fff;
 
 
 .termos_de_uso{
-  width: 280px;
-  height: 60px;
-/*  background-color: pink;*/
+  width: 220px;
+  height: 50px;
+  background-color: pink;
   margin-left: auto;
   margin-right: auto;
-    margin-top: 2   px;
+    margin-top: 5px;
     
-  padding-top: 10px;
+  padding: 30px;
+    padding-top: 0px;
 }
 
 .termos_de_uso p{
