--- a/css/styleHome.css
+++ b/css/styleHome.css
@@ -1,5 +1,7 @@
 body{
   font-family: helvetica;
+/*  font-family: century ghotic;*/
+/*  font-family: Kozuka Gothic Pro monospace;*/
   margin: auto;
   padding: 0px;
 }
