--- a/cms/css/styleGeral.css
+++ b/cms/css/styleGeral.css
@@ -448,11 +448,22 @@ width: 98%;
 
 
 .titulo_tbl_servico{
+ width: 828px;     
+  height: 50px;
+  background-color: #bd5a20a6;
+  color: aliceblue;
+  
+    margin-top: 10px;
+    margin-left: 30px;
+  
+  /*margin-top: -175px;*/
+    /*
   max-width: 1200px;
   height: 10%;
-  /* border: 1px solid #000; */
+   border: 1px solid #000; 
   background-color: #fff;
   margin: auto;
+*/
 
 }
 
@@ -461,6 +472,9 @@ width: 98%;
   height: 100%;
   /* background-color: white; */
   float: left;
+    border-top: 1px solid #000;
+    border-right: 1px solid #000;
+/*    margin-top: 10px;*/
 }
 
 .conteudo_tbl_servico p{
@@ -1178,9 +1192,11 @@ nav ul li a{
 /*Carbook*/
 
 .cabecalho_carbook{
-  width: 100%;
+   width: 100%;
   height: 70px;
-  background-color: red;
+  background-color: black;
+  color: aliceblue;
+  border-top:solid 2px #eca023; 
 }
 
 .cadastro_carbook{
@@ -1466,7 +1482,7 @@ nav ul li a{
   height: auto;
   overflow: hidden;
   min-height: 100vw;
-  background-color: blue;
+  /*background-color: blue;*/
 
 }
 
@@ -1474,7 +1490,7 @@ nav ul li a{
 .titulo_temas_principal{
   width: 100%;
   height: 50px;
-  background-color: pink;
+  /*background-color: pink;*/
 }
 
 .titulo_temas_principal h1{
@@ -1489,7 +1505,7 @@ nav ul li a{
   height: auto;
   min-height: 50px;
   overflow: hidden;
-  background-color: red;
+  /*background-color: red;*/
   margin-top: 10px;
 }
 
@@ -1497,7 +1513,7 @@ nav ul li a{
   width: 90%;
   height: 100%;
   float: left;
-  background-color: green;
+  /*background-color: green;*/
   padding-top: 10px;
 }
 
@@ -1511,7 +1527,7 @@ nav ul li a{
   width: 10%;
   height: 100%;
   float: left;
-  background-color: brown;
+  /*background-color: brown;*/
 }
 
 .conteudo_cabecalho{
@@ -1519,7 +1535,7 @@ nav ul li a{
   height: auto;
   overflow: hidden;
   min-height: 100vw;
-  background-color: green;
+  /*background-color: green;*/
 
 }
 
@@ -1537,7 +1553,7 @@ nav ul li a{
     height: auto;
     min-height: 50px;
     overflow: hidden;
-    background-color: blue;
+    /*background-color: blue;*/
     margin-top: 10px;
 }
 
@@ -1576,7 +1592,7 @@ nav ul li a{
 .principal_perguntasRespostas{
   width: 100%;
   height: 100vh;
-  background-color: green;
+  /*background-color: green;*/
 }
 
 .tbl_mostrar_perguntas{
@@ -1606,7 +1622,7 @@ nav ul li a{
   width: 100%;
   height: auto;
   min-height: 50px;
-  background-color: pink;
+  /*background-color: pink;*/
 }
 
 /* .item_perguntas:hover>.div_perguntas{
@@ -1620,7 +1636,7 @@ nav ul li a{
   min-height: 200px;
   overflow: hidden;
   display: none;
-  background-color: red;
+  /*background-color: red;*/
 }
 
 .displayBlockPer{
@@ -1629,4 +1645,10 @@ nav ul li a{
 
 .displaynonePer{
   display: none;
+}
+
+.img3333{
+  width: 1000px;
+  height: 700px;
+  margin: auto;
 }
