--- a/cms/css/styleUsuario.css
+++ b/cms/css/styleUsuario.css
@@ -13,10 +13,12 @@ h1{
   /*background: green;*/
 }
 .titulo_usuario{
-  width:100%;
-  height: 50px;
-  margin: auto;
-  background-color: pink;
+    width: 100%;
+  height: 70px;
+  background-color: black;
+  color: aliceblue;
+  border-top:solid 2px #eca023;
+    margin-bottom: 50px;
 }
 .titulo_usuario h1{
   padding: 0px;
@@ -29,9 +31,22 @@ h1{
 }
 /**/
 #conteudo_usuario{
-  width: 100%;
+/*
+  
+     width: 100%;
   height: 50px;
   background-color: #636568;
+  margin-left: 30px;
+*/
+/*  width: 78%;     */
+  width: 828px;     
+  height: 50px;
+  background-color: #bd5a20a6;
+  color: aliceblue;
+/*  border-top:solid 2px #eca023;*/
+    
+    margin-left: 30px;
+  
   /*margin-top: -175px;*/
 }
 
@@ -43,6 +58,8 @@ h1{
   font-size: 25px;
   text-align: center;
   padding-top: 10px;
+    border-right: solid black 2px;
+    border-top: solid black 2px;
   font-weight: bold;
 }
 
@@ -83,6 +100,8 @@ h1{
   text-align: center;
   padding-top: 10px;
   font-weight: bold;
+    border-right: solid black 2px;
+    border-top: solid black 2px;
 }
 
 .dados_user_modo{
