--- a/cms/css/style_prestadora.css
+++ b/cms/css/style_prestadora.css
@@ -12,7 +12,10 @@
   height: 50px;
   margin: auto;
   /* padding-bottom: 10px; */
-  background-color: pink;
+  background-color: black;
+  color: aliceblue;
+  border-top:#eca028 2px solid;
+/*  border-right:#eca028 2px solid;*/
 }
 
 
@@ -25,6 +28,7 @@
   /* background-color: blue; */
   padding-top: 10px;
   font-weight: bold;
+    border-right:#eca028 2px solid;
 }
 
 .dados_prest_item_modo{
