--- a/cms/css/style_prestadora.css
+++ b/cms/css/style_prestadora.css
@@ -90,3 +90,197 @@
   margin-right: auto;
   margin-bottom: 10px;
 }
+
+.Conteudos_filiais_completo{
+  width: 100%;
+  height: 500px;
+}
+
+.Filiais{
+  height: 100%;
+  width: 100%;
+  background-color: #fff;
+  margin: auto;
+  overflow-y: scroll;
+}
+
+
+.Filiais::-webkit-scrollbar {
+  width:10px;
+  background:#e3e0d6;
+
+  } /* configurando scroll */
+.Filiais::-webkit-scrollbar-track {
+  background: rgba(0,0,0,0.1);
+}
+
+.Filiais::-webkit-scrollbar-thumb {
+   border-radius:10px;
+    background:#8b8778;
+   }
+
+.nome_Filial{
+  width: 100%;
+  background-color: blue;
+  height: 50px;
+}
+
+.nome_Filial p{
+  padding: 0px;
+  margin: 0px;
+}
+
+.filial_p{
+  width: 400px;
+  height: 100%;
+  background-color: green;
+  float: left;
+}
+
+.status_filial{
+  width: 100px;
+  height: 100%;
+  background-color:#f200ff;
+  float: left;
+}
+
+.dados_plano{
+  width: 100%;
+  height: auto;
+  min-height: 100px;
+  overflow: hidden;
+  background-color: #b5d100;
+
+}
+
+.nome_plano{
+  width: 200px;
+  height: auto;
+  min-height: 100px;
+  overflow: hidden;
+  border-right: 2px solid #000;
+  float: left;
+}
+
+.nome_plano p{
+  margin: 0px;
+  padding: 0px;
+}
+
+.descricao_plano_flial{
+  width: 400px;
+  height: auto;
+  min-height: 100px;
+  overflow: hidden;
+  background-color: #0d4954;
+  float: left;
+}
+
+.valor_plano_filial{
+  width: 80px;
+  height: auto;
+  min-height: 100px;
+  overflow: hidden;
+  background-color: #12540d;
+  float: left;
+}
+
+.dados_filial_prestadora{
+  width: 100%;
+  height: auto;
+  min-height: 100px;
+  overflow: hidden;
+  background-color: #c93500;
+
+}
+
+.dados_de_endereco{
+  width: 250px;
+  height: auto;
+  min-height: 100px;
+  overflow: hidden;
+  float: left;
+    background-color: #c90000;
+    float: left;
+
+}
+
+.dados_de_status{
+  width: 420px;
+  height: auto;
+  min-height: 100px;
+  overflow: hidden;
+  float: left;
+    background-color: #c90000;
+    float: left;
+
+}
+
+.fieldset-border {
+    border: 1px groove #ddd !important;
+    padding: 0 1em 1em 1em !important;
+    margin: 0 0 1em 0 !important;
+    -webkit-box-shadow: 0px 0px 0px 0px #000;
+    box-shadow: 0px 0px 0px 0px #000;
+    width: 200px;
+    height: auto;
+    min-height: 100px;
+    overflow: hidden;
+}
+
+.fieldset-borderMAior {
+    border: 1px groove #ddd !important;
+    padding: 0 1em 1em 1em !important;
+    margin: 0 0 1em 0 !important;
+    -webkit-box-shadow: 0px 0px 0px 0px #000;
+    box-shadow: 0px 0px 0px 0px #000;
+    width: 370px;
+    height: auto;
+    min-height: 100px;
+    overflow: hidden;
+}
+
+.fieldset-border .legend-border {
+    font-size: 1.2em !important;
+    text-align: left !important;
+    /* width: auto; */
+    /* padding: 0 10px; */
+    border-bottom: none;
+}
+
+.dados_endereco_filial{
+  width: 200px;
+  height: auto;
+  min-height: 100px;
+  overflow: hidden;
+  background-color: #c90000;
+
+}
+
+.dados_endereco_filial2{
+  width: 100%;
+  height: auto;
+  min-height: 100px;
+  overflow: hidden;
+  background-color: #c90000;
+
+}
+
+.status_filal_dados{
+  width: 100%;
+  height: 40px;
+  background-color: #0003c9;
+}
+
+.titulo_status_filial{
+  width: 200px;
+  height: 20px;
+  float: left;
+
+}
+
+.titulo_status_filial p{
+margin: 0px;
+padding: 0px;
+
+}
