--- a/AreaPrestadora/css/stylegeralPrestadora.css
+++ b/AreaPrestadora/css/stylegeralPrestadora.css
@@ -63,6 +63,7 @@ body{
 .item_menu:hover{
 border-left: 5px solid red;
 width: 98%;
+
 }
 
 .item_menu p{
@@ -73,6 +74,32 @@ width: 98%;
 }
 
 .item_menu a{
+  text-decoration: none;
+  color: #fff;
+}
+.item_menu:hover>.item_menu_filial{
+  display:block;
+  margin-bottom: 100px;
+}
+
+.item_menu_filial{
+  width: 100%;
+  height: 50px;
+  /* border-bottom: 2px solid #2E353F; */
+  display: none;
+  background-color: #000;
+}
+
+
+
+.item_menu_filial p{
+  margin: 0px;
+  padding-left: 20%;
+  font-size: 130%;
+  padding-top: 3%;
+}
+
+.item_menu_filial a{
   text-decoration: none;
   color: #fff;
 }
@@ -201,6 +228,6 @@ width: 98%;
 .conteudo_padrao{
    width: 100%;
    height: 90%;
-   background-color: #fff;
+   background-color: green;
    float: left;
 }
