--- a/css/styleCarrinho.css
+++ b/css/styleCarrinho.css
@@ -1,3 +1,5 @@
+
+
 .principalCarrinho{
   width: 100%;
   height: auto;
@@ -350,4 +352,8 @@
 
 .Novocursor{
   cursor: pointer;
+}
+
+.esconder{
+  display: none;
 }
